<resources>
    <string name="app_name">Pets Adoption</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome</string>
    <string name="watch_pets_fragment_label">Watch Pets</string>
    <string name="watch_messages_fragment_label">Messages</string>
    <string name="my_pets_fragment_label">My Pets</string>
    <string name="btn_watch_pets_text">Watch Pets</string>
    <string name="btn_offer_to_adopt_text">Offer Pet For Adoption</string>

    <string name="welcome_text">Welcome to Pets Adoption</string>
    <!-- Strings related to login -->
    <string name="default_web_client_id2">649176801512-946g0lcdahsi6pil9fi5qs8gjgi0haae.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_pet_Description">Description</string>
    <string name="pet_name">Pet Name:</string>
    <string name="title_pet_Description">Description:</string>
    <string name="name">Name</string>
    <string name="specie">Specie:</string>
    <string name="breed">Breed:</string>
    <string name="sex">Sex:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight in KG:</string>
    <string name="kg">KG</string>
    <string name="vaccinated">Vaccinated:</string>
    <string name="diet">Diet:</string>
    <string name="add_pet">Add Pet</string>
    <string name="back">Back</string>
    <string name="content">Content</string>
    <string name="request_to_adopt">Request To Adopt</string>
    <string name="your_pets">Your Pets</string>
    <string name="offer_a_pet_for_adoption">Offer a pet for adoption</string>
    <string name="pet_details">Pet Details</string>
    <string name="set_photo">Choose\nPicture</string>
    <string name="watch_messages_message">Hi _Some Name_ want to adopt _Some Pet Name_ _Some Name_ Email: _Some Email Address_</string>
    <string name="copy_email">Copy\nEmail</string>
    <string name="copy_name">Copy\nName</string>
    <string name="send_email">Send\nEmail</string>
    <string name="watch_messages1">Messages</string>
    <string name="desc_pet_image">pet image</string>
    <string-array name="specieSelectionList">
        <item>Cat</item>
        <item>Dog</item>
        <item>Fish</item>
        <item>Chicken</item>
        <item>Rabbit</item>
    </string-array>
    <string-array name="sexSelectionList">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="dietSelectionList">
        <item>Vegetarian</item>
        <item>Carnivore</item>
        <item>Omnivore</item>
    </string-array>

    <string-array name="sexSelectionListFilter">
        <item>Any Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="dietSelectionListFilter">
        <item>Any Diet</item>
        <item>Vegetarian</item>
        <item>Carnivore</item>
        <item>Omnivore</item>
    </string-array>

    //Back4App
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change BOTH strings as required -->
    <string name="back4app_app_id">OXRjW8j4dQmxGS2xYcnMgwOH4uzBH9NiFTajqBVJ</string>
    <string name="back4app_client_key">w85QEiafF4uaDk17gSHMGKwD6f37vTv1C7sAaZIm</string>
    <string name="tvPetNameListItem">Pet Name</string>
    <string name="show_pet_button">Details</string>
    <string name="tv_list_item_pet_specie">Specie</string>
    <string name="watch_messages">Watch Messages</string>
    <string name="delete">Delete</string>
    <string name="bttnAlreadyRequested">Already Requested</string>
    <string name="bttnTextDeletPet">Delete Pet</string>
    <string name="nothing_to_see_here_yet">Nothing To See Here Yet</string>
    <string name="filter">Filter</string>
    <string name="my_pets">My Pets</string>
    <string name="you_can_only_watch_pets_while_not_signed_in">You can only watch pets while not signed in\nSign In to access all the features</string>
    <string name="home_page">Home Page</string>
    <string name="exit">Exit</string>
    <string name="owner_name">User name:</string>

</resources>