<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE5DF"
    tools:context=".MyPetsFragment">

    <TextView
        android:id="@+id/tvYourPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_pets"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/rvMyPetsList"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnOfferPet,btnBackMyPets"
        tools:layout_editor_absoluteY="27dp" />

    <Button
        android:id="@+id/btnOfferPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="36dp"
        android:padding="14dip"
        android:textSize="11sp"
        android:text="@string/offer_a_pet_for_adoption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvMyPetsList" />

    <Button
        android:id="@+id/btnBackMyPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:padding="14dip"
        android:textSize="11sp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnOfferPet"
        app:layout_constraintTop_toBottomOf="@+id/rvMyPetsList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMyPetsList"
        android:layout_width="411dp"
        android:layout_height="535dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:scrollbars="vertical"
        android:textAlignment="gravity"
        android:textDirection="ltr"
        android:background="#ECE5DF"
        app:layout_constraintBottom_toTopOf="@+id/btnOfferPet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourPets"
        tools:listitem="@layout/pets_list_item"></androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nothing_to_see_here_yet"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvYourPets" />

</androidx.constraintlayout.widget.ConstraintLayout>