<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="3dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:pointerIcon="arrow"
    app:barrierMargin="5dp"
    tools:context=".ListItem">


    <ImageView
        android:id="@+id/ivPetSmallImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:contentDescription='@string/desc_pet_image'
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_empty_pet_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPetNameRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tvPetNameListItem"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPetSpeciesRV"
        app:layout_constraintTop_toBottomOf="@+id/tvPetSpeciesRV"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/tvPetSpeciesRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_list_item_pet_specie"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnViewPetRV"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/ivPetSmallImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/btnViewPetRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:text="@string/show_pet_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="60dp"
        app:constraint_referenced_ids="tvPetNameRV,tvPetSpeciesRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>